# tmux-window-name

./: README.md  README_CN.md  pyproject.toml  tmux_window_name.tmux
.github/workflows/: release.yml
Formula/: tmux-window-name.rb
docs/: hooks.md  hooks_CN.md  options.md  options_CN.md
