[project]
name = "tmux-window-name"
version = "1.0.2"
description = "Smart tmux window names like IDE tablines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["libtmux>=0.16"]

[dependency-groups]
dev = ["pytest>=7", "ruff>=0.1"]

[project.scripts]
tmux-window-name = "tmux_window_name.cli:main"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tmux_window_name"]

[tool.ruff]
target-version = 'py311'
line-length = 120
exclude = ["__pycache__", ".venv", "venv"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]